changed call number table to class number (one-to-many); deploy prep
